R2112:
======
- remove IDF event-task
- make use of socket API an option
- fix syslog hang
- added esp32 UART pin routing support
- fix for UART initialization
- renamed console command to term to avoid confusion
- syslog messages with millisecond accuracy
- influx init should restart influx service after stop
- higher log timestamp resolution
- fix config enum-names parsing
- infux/tcp auto-restart
- fix timer interval parsing for minutes
- button's timing thresholds adjustment

R2111:
======
- complete new integration with LWIP stack
- new DNS and SNTP implementation
- Telnet optimizations
- further reduced RAM consumption
- enhanced Influx transmission
- new LWIP based OTA transmission
- added direct action triggering support in MQTT
- several minor improvements and bugfixes
- added IPv6 support (disabled on 1MB devices per default)
- added support for multiple DNS servers
- porting work for ESP32-IDF V4.x (incomplete)
- updated setenv.sh to work with IDF tools concept
- ROMFS32 fixes
- enhanced module concept for debug messages
- added command for triggering events from shell
- HT16K33 should register as I2C device

R2108:
======
- profiing update and fixes
- HC-SR04 display integration
- fix: float formatting fix
- fix: IPv6 related build issues
- fix: Windows is unable to checkout Atrium due to con.man

R2107:
======
- provide available actions via http as /actions.json
- added webpage for direct action triggering
- mkromfs: sort entries by name
- added generic romfs for d1_lite
- display env variables in default index.html
- fix: ROMFS is invisible if SPIFFS is compiled in
- fix: HC-SR04 is not initializing

R2106:
======
- added support for SSD1306 OLEDs
- added optimized fonts for paged OLEDs
- auto naming for more devices
- added HDC1000 support
- added APDS-9930 support
- added support for LCDs based on HD44780U with PCF8574 interface
- support for multiple named HC-SR04 with env support