@@ -51,13 +51,24 @@ static set<Action,less<Action>> Actions;
 static event_t ActionTriggerEvt = 0;
 
 
+Action::Action(const char *n)
+: name(n)
+, ev(0)
+, func(0)
+{
+//	log_dbug(TAG,"Action(%s)",n);
+}
+
+
 Action::Action(const char *n, void (*f)(void*),void *a, const char *t)
 : name(n)
 , text(t)
+, ev(event_register("*trigger`",n))
 , func(f)
 , arg(a)
 {
-
+//	log_dbug(TAG,"Action(%s,...)",n);
+	event_callback(ev,this);
 }
 
 
@@ -120,22 +131,49 @@ int action_activate(const char *name)
 }
 
 
+int action_activate_arg(const char *name, void *arg)
+{
+	Action x(name);
+	set<Action,less<Action>>::iterator i = Actions.find(x);
+	if (i == Actions.end()) {
+		log_warn(TAG,"unable to execute unknown action '%s'",name);
+		if (arg)
+			free(arg);
+		return 1;
+	}
+	log_dbug(TAG,"triggered action %s",name);
+	Action &a = const_cast<Action&>(*i);
+	a.activate(arg);
+	return 0;
+}
+
+
 int action_dispatch(const char *n, size_t l)
 {
 	if (l == 0)
 		l = strlen(n);
-	char name[l+1];
-	name[l] = 0;
-	memcpy(name,n,l);
-	Action x(name);
-	set<Action,less<Action>>::iterator i = Actions.find(name);
-	if (i == Actions.end()) {
-		log_warn(TAG,"unable to dispatch unknown action '%s'",name);
+	size_t nl = l;
+	const char *e = strchr(n,' ');
+	if (e)
+		nl = e-n;
+	char name[nl+1];		// temporary for search
+	name[nl] = 0;
+	memcpy(name,n,nl);
+	Action *a = action_get(name);
+	if (a == 0) {
+		log_warn(TAG,"dispatch unknown '%s'",name);
 		return 1;
 	}
-	Action *a = const_cast<Action*>(&(*i));
-	log_dbug(TAG,"dispatch action %s (%p)",name,a);
-	event_trigger_arg(ActionTriggerEvt,a);
+	log_dbug(TAG,"dispatch %s",name);
+	char *arg = 0;
+	if (e) {
+		size_t al = l - nl;
+		arg = (char *) malloc(al);
+		--al;
+		memcpy(arg,e+1,al);
+		arg[al] = 0;
+	}
+	event_trigger_arg(a->ev,arg);
 	return 0;
 }
 
@@ -152,7 +190,7 @@ static void action_event_cb(void *arg)
 {
 	Action *a = (Action *)arg;
 	assert(a);
-	log_dbug(TAG,"execute action %s",a->name);
+	log_dbug(TAG,"action %s",a->name);
 	a->activate();
 }
 
